--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 blinker==1.8.2
+certifi==2024.8.30
 click==8.1.7
+cloudinary==1.41.0
 flask==3.0.3
 Flask-Admin==1.6.1
 Flask-Login==0.6.3
@@ -10,8 +12,10 @@ itsdangerous==2.2.0
 jinja2==3.1.4
 MarkupSafe==2.1.5
 PyMySQL==1.1.1
+six==1.16.0
 SQLAlchemy==2.0.36
 typing-extensions==4.12.2
+urllib3==2.2.3
 werkzeug==3.0.4
 wtforms==3.1.2
 zipp==3.20.2
