--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,11 @@ importlib-metadata==8.5.0
 itsdangerous==2.2.0
 jinja2==3.1.4
 MarkupSafe==2.1.5
+numpy==1.24.4
+opencv-python==4.10.0.84
 PyMySQL==1.1.1
+python-barcode==0.15.1
+pyzbar==0.1.9
 six==1.16.0
 SQLAlchemy==2.0.36
 typing-extensions==4.12.2
